--- a/views/companySignIn.ejs
+++ b/views/companySignIn.ejs
@@ -2,8 +2,8 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="../public/css/bootstrap.css" />
-    <link rel="stylesheet" href="../public/css/main.css" />
+    <link rel="stylesheet" href="/public/css/bootstrap.css" />
+    <link rel="stylesheet" href="/public/css/main.css" />
     <title>Company Sign IN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
@@ -63,6 +63,6 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script src="../public/javascript/companySignIn.js"></script>
+    <script src="/public/javascript/companySignIn.js"></script>
   </body>
 </html>
