--- a/views/registerSuccess.ejs
+++ b/views/registerSuccess.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="static/bootstrap.css" />
-    <link rel="stylesheet" href="static/userRegistration.css" />
+    <link rel="stylesheet" href="/public/static/bootstrap.css" />
+    <link rel="stylesheet" href="/public/static/userRegistration.css" />
     <title>User Registration Success</title>
   </head>
 
@@ -39,6 +39,6 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script src="../public/javascript/UserRegistration.js"></script>
+    <script src="/public/javascript/UserRegistration.js"></script>
   </body>
 </html>
